# Enzyme

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  Readme.md  _codeql_detected_source_root  build-joe.sh  config.toml  index.html  index.xml  plan_fortran.md  setup-joe.sh  sitemap.xml  test-joe.sh
.packaging/rust/: Cargo.toml  README.md
.packaging/rust/src/: compile.rs  downloader.rs  generate_api.rs  lib.rs  main.rs  run.rs  utils.rs
enzyme/: .bazelrc  .clangd  BUILD  CMakeLists.txt  CMakePresets.json  MODULE.bazel  WORKSPACE  deferred.mlir  llvm_dummy.BUILD  placeholdertest.sh  workspace.bzl
enzyme/BCLoad/: BCLoader.cpp  BCLoader.h  BCLoaderNew.h  CMakeLists.txt  ClangBCLoader.cpp  fixwrapblas.sh  makeblas.cmake
enzyme/Enzyme/: ActiveVariable.cpp  ActivityAnalysis.cpp  ActivityAnalysis.h  ActivityAnalysisPrinter.cpp  ActivityAnalysisPrinter.h  AdjointGenerator.h  Annotations.h  BlasDerivatives.td  BlasHeader.h  BlasOpts.td  CApi.cpp  CApi.h  CMakeLists.txt  CacheUtility.cpp  CacheUtility.h  CallDerivatives.cpp  CustomDCE.cpp  CustomDCE.h  DebugUtils.h  DiffeGradientUtils.cpp  DiffeGradientUtils.h  DifferentialUseAnalysis.cpp  DifferentialUseAnalysis.h  Enums.h  Enzyme.cpp  Enzyme.h  EnzymeLogic.cpp  EnzymeLogic.h  ErrorHandling.h  FixupJuliaCallingConvention.cpp  FunctionUtils.cpp  FunctionUtils.h  GradientUtils.cpp  GradientUtils.h  Herbie.cpp  Herbie.h  InstructionBatcher.cpp  InstructionBatcher.h  InstructionDerivatives.td  JLInstSimplify.cpp  (+48 more)
enzyme/Enzyme/Clang/: EnzymeClang.cpp  EnzymePassLoader.cpp  include_utils.td
enzyme/Enzyme/Flang/: EnzymeFlang.cpp
enzyme/Enzyme/MLIR/: CMakeLists.txt  FIR_README.md  README.MD  enzyme-fir-plugin.cpp  enzymemlir-opt.cpp  fir-enzyme-opt.cpp
enzyme/Enzyme/Poseidon/: Poseidon.cpp  Poseidon.h  PoseidonEvaluators.cpp  PoseidonEvaluators.h  PoseidonHerbieUtils.cpp  PoseidonHerbieUtils.h  PoseidonLogger.cpp  PoseidonLogger.h  PoseidonMultiFloat.cpp  PoseidonMultiFloat.h  PoseidonPrecUtils.cpp  PoseidonPrecUtils.h  PoseidonProfUtils.cpp  PoseidonProfUtils.h  PoseidonSolvers.cpp  PoseidonSolvers.h  PoseidonTypes.cpp  PoseidonTypes.h  PoseidonUtils.cpp  PoseidonUtils.h  README.md
enzyme/Enzyme/Runtime/: EnzymeMPFR.cpp  EnzymeMPFR.h
enzyme/Enzyme/SCEV/: .ScalarEvolutionExpander.cpp.swp  ScalarEvolutionExpander.cpp  ScalarEvolutionExpander.h  ScalarEvolutionExpander11.cpp
enzyme/Enzyme/TypeAnalysis/: BaseType.h  ConcreteType.h  RustDebugInfo.cpp  RustDebugInfo.h  TBAA.h  Trie.h  TypeAnalysis.cpp  TypeAnalysis.h  TypeAnalysisPrinter.cpp  TypeAnalysisPrinter.h  TypeTree.cpp  TypeTree.h
enzyme/Enzyme/targets/: BlasDerivatives.inc  BlasDerivatives.td  BlasExampleGenerated.cpp  InstructionDerivatives.inc  InstructionDerivatives.td
enzyme/Fortran/: CMakeLists.txt  README.md  enzyme.f90  enzyme_function_hooks.f90  enzyme_mod.f90
enzyme/bazel/: import_llvm.bzl
enzyme/bazel_patches/: llvm_build.patch
enzyme/bclib/: cblas_daxpy_void.bc  cblas_sdot_float.bc  nvdoublered3.bc  nvfloatred3.bc  ored.ll  ored2.ll  red.ll  red2.ll
enzyme/bench/: gen.py  gen_ptr.py  gen_rs.py  gen_rs_unsafe.py  stress_2_501.cpp  stress_5_500.cpp  stress_5_500.rs  stress_5_500_ptr.cpp  stress_5_500_unsafe.rs
enzyme/benchmarks/: CMakeLists.txt  getdata.sh  lit.site.cfg.py.in  upload-results.py
enzyme/benchmarks/ForwardMode/: CMakeLists.txt
enzyme/benchmarks/adbench/: ba.h  gmm.h  hand.h  lstm.h
enzyme/benchmarks/ba/: ba.cpp
enzyme/benchmarks/blas/: .gitignore  Makefile  README  ba.c  gebrd.c  gels.c  gesv.c  gmm.c  helper.h  ht.c  syev.c
enzyme/benchmarks/gmm/: gmm.cpp
enzyme/benchmarks/hand/: hand.cpp
enzyme/benchmarks/lstm/: lstm.cpp
enzyme/cmake/: EnzymeConfig.cmake.in  EnzymeConfigVersion.cmake.in  dummy.cpp
enzyme/cmake/test_add_subdirectory/: CMakeLists.txt  main.cpp
enzyme/cmake/test_find_package/: CMakeLists.txt
enzyme/functional_tests_c/: FAIL_insertsort_sum_alt.c  Makefile  brokentests.txt  differential_pointer_return.c  disabled_tests.txt  gentests.py  insertsort_sum.c  insertsort_sum.cpp  insertsort_sum_alt.c  lit.site.cfg.py.in  loop_simplified.ll  loops.c  loopsdouble.c  loopstriple.c  readwriteread.c  recurse.c  setup.sh  test.template  ~
enzyme/functional_tests_c/testfiles/: insertsort_sum-enzyme0.test  insertsort_sum-enzyme1.test  insertsort_sum-enzyme2.test  insertsort_sum-enzyme3.test  insertsort_sum_alt-enzyme0.test  insertsort_sum_alt-enzyme1.test  insertsort_sum_alt-enzyme2.test  insertsort_sum_alt-enzyme3.test  loops-enzyme0.test  loops-enzyme1.test  loops-enzyme2.test  loops-enzyme3.test  loopsdouble-enzyme0.test  loopsdouble-enzyme1.test  loopsdouble-enzyme2.test  loopsdouble-enzyme3.test  loopstriple-enzyme0.test  loopstriple-enzyme1.test  loopstriple-enzyme2.test  loopstriple-enzyme3.test  recurse-enzyme0.test  recurse-enzyme1.test  recurse-enzyme2.test  recurse-enzyme3.test
enzyme/include/enzyme/: enzyme  mpfr  tuple  type_traits  utils
enzyme/julia/: Project.toml
enzyme/julia/src/: Enzyme.jl  compiler.jl
enzyme/julia/test/: DiffTests.jl  Project.toml  runtests.jl
enzyme/scripts/: bundle-includes.sh
enzyme/test/: BUILD  CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  upload-results.py
enzyme/test/ActivityAnalysis/: allocator.ll  allocindircall.ll  allocrecons.ll  allocret.ll  ashrgep.ll  atomicadd.ll  atomicrmw.ll  baddat.ll  baddat2.ll  capturedalloc.ll  constclimafor.ll  doublealloc.ll  empty.ll  func-not-found.ll  funname.ll  gc_rooted_mismatch.ll  gcloadedt.mlir  immutable.ll  inactive_store.ll  infn.ll  insertextract.ll  integration.ll  intelSubscriptIntrinsic.ll  localAllocatable.ll  loopphi.ll  mallocuse.ll  memalgn.ll  multiptr.ll  multitype.ll  objref.ll  ptr2.ll  ptr3.ll  ptrint.ll  store_int.ll  strcmp.ll  string.ll  subld.ll
enzyme/test/BCLoader/: CMakeLists.txt  bcloader-daxpy.ll  bcloader-ddot.ll  bcloader-sdot.ll  fblas_ddot.ll
enzyme/test/CMake/: CMakeLists.txt
enzyme/test/CppInterface/: CMakeLists.txt  enzyme_types.cpp  forward_mode.cpp  gh_issue_1785.cpp  minimal_test_framework.hpp
enzyme/test/Enzyme/: CMakeLists.txt  ge.ll  (+3 more)
enzyme/tools/: CMakeLists.txt
(+2500 files in other folders)
