"""bzlmod configuration for enzyme"""

module(name = "enzyme")

bazel_dep(name = "apple_support", version = "1.24.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.11")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "zlib-ng", version = "2.0.7", repo_name = "llvm_zlib")
bazel_dep(name = "zstd", version = "1.5.7", repo_name = "llvm_zstd")

# LLVM path: ../llvm-project
llvm = use_extension("//:bazel/import_llvm.bzl", "llvm_import_extension")
use_repo(llvm, "llvm-raw")
llvm_configure = use_repo_rule("@llvm-raw//utils/bazel:configure.bzl","llvm_configure")
llvm_configure(name = "llvm-project", targets = ["AArch64","NVPTX","X86"])

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/vimarsh6739/bazel-compile-commands-extractor",
    commit = "359a657680aa74d2a70240bb310c1636601e0af8"
)
